// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bench scenarios produce equivalent SQL > delete-where > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      1,
    ],
    "sql": "delete from "users" where "users"."id" = $1",
  },
  "kysely": {
    "params": [
      1,
    ],
    "sql": "delete from "users" where "id" = $1",
  },
  "sumak": {
    "params": [
      1,
    ],
    "sql": "DELETE FROM "users" WHERE ("id" = $1)",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > insert-many-100 > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      1,
      "user-0",
      "user-0@x.io",
      "1970-01-01T00:00:00.000Z",
      2,
      "user-1",
      "user-1@x.io",
      "1970-01-01T00:00:00.000Z",
      3,
      "user-2",
      "user-2@x.io",
      "1970-01-01T00:00:00.000Z",
      4,
      "user-3",
      "user-3@x.io",
      "1970-01-01T00:00:00.000Z",
      5,
      "user-4",
      "user-4@x.io",
      "1970-01-01T00:00:00.000Z",
      6,
      "user-5",
      "user-5@x.io",
      "1970-01-01T00:00:00.000Z",
      7,
      "user-6",
      "user-6@x.io",
      "1970-01-01T00:00:00.000Z",
      8,
      "user-7",
      "user-7@x.io",
      "1970-01-01T00:00:00.000Z",
      9,
      "user-8",
      "user-8@x.io",
      "1970-01-01T00:00:00.000Z",
      10,
      "user-9",
      "user-9@x.io",
      "1970-01-01T00:00:00.000Z",
      11,
      "user-10",
      "user-10@x.io",
      "1970-01-01T00:00:00.000Z",
      12,
      "user-11",
      "user-11@x.io",
      "1970-01-01T00:00:00.000Z",
      13,
      "user-12",
      "user-12@x.io",
      "1970-01-01T00:00:00.000Z",
      14,
      "user-13",
      "user-13@x.io",
      "1970-01-01T00:00:00.000Z",
      15,
      "user-14",
      "user-14@x.io",
      "1970-01-01T00:00:00.000Z",
      16,
      "user-15",
      "user-15@x.io",
      "1970-01-01T00:00:00.000Z",
      17,
      "user-16",
      "user-16@x.io",
      "1970-01-01T00:00:00.000Z",
      18,
      "user-17",
      "user-17@x.io",
      "1970-01-01T00:00:00.000Z",
      19,
      "user-18",
      "user-18@x.io",
      "1970-01-01T00:00:00.000Z",
      20,
      "user-19",
      "user-19@x.io",
      "1970-01-01T00:00:00.000Z",
      21,
      "user-20",
      "user-20@x.io",
      "1970-01-01T00:00:00.000Z",
      22,
      "user-21",
      "user-21@x.io",
      "1970-01-01T00:00:00.000Z",
      23,
      "user-22",
      "user-22@x.io",
      "1970-01-01T00:00:00.000Z",
      24,
      "user-23",
      "user-23@x.io",
      "1970-01-01T00:00:00.000Z",
      25,
      "user-24",
      "user-24@x.io",
      "1970-01-01T00:00:00.000Z",
      26,
      "user-25",
      "user-25@x.io",
      "1970-01-01T00:00:00.000Z",
      27,
      "user-26",
      "user-26@x.io",
      "1970-01-01T00:00:00.000Z",
      28,
      "user-27",
      "user-27@x.io",
      "1970-01-01T00:00:00.000Z",
      29,
      "user-28",
      "user-28@x.io",
      "1970-01-01T00:00:00.000Z",
      30,
      "user-29",
      "user-29@x.io",
      "1970-01-01T00:00:00.000Z",
      31,
      "user-30",
      "user-30@x.io",
      "1970-01-01T00:00:00.000Z",
      32,
      "user-31",
      "user-31@x.io",
      "1970-01-01T00:00:00.000Z",
      33,
      "user-32",
      "user-32@x.io",
      "1970-01-01T00:00:00.000Z",
      34,
      "user-33",
      "user-33@x.io",
      "1970-01-01T00:00:00.000Z",
      35,
      "user-34",
      "user-34@x.io",
      "1970-01-01T00:00:00.000Z",
      36,
      "user-35",
      "user-35@x.io",
      "1970-01-01T00:00:00.000Z",
      37,
      "user-36",
      "user-36@x.io",
      "1970-01-01T00:00:00.000Z",
      38,
      "user-37",
      "user-37@x.io",
      "1970-01-01T00:00:00.000Z",
      39,
      "user-38",
      "user-38@x.io",
      "1970-01-01T00:00:00.000Z",
      40,
      "user-39",
      "user-39@x.io",
      "1970-01-01T00:00:00.000Z",
      41,
      "user-40",
      "user-40@x.io",
      "1970-01-01T00:00:00.000Z",
      42,
      "user-41",
      "user-41@x.io",
      "1970-01-01T00:00:00.000Z",
      43,
      "user-42",
      "user-42@x.io",
      "1970-01-01T00:00:00.000Z",
      44,
      "user-43",
      "user-43@x.io",
      "1970-01-01T00:00:00.000Z",
      45,
      "user-44",
      "user-44@x.io",
      "1970-01-01T00:00:00.000Z",
      46,
      "user-45",
      "user-45@x.io",
      "1970-01-01T00:00:00.000Z",
      47,
      "user-46",
      "user-46@x.io",
      "1970-01-01T00:00:00.000Z",
      48,
      "user-47",
      "user-47@x.io",
      "1970-01-01T00:00:00.000Z",
      49,
      "user-48",
      "user-48@x.io",
      "1970-01-01T00:00:00.000Z",
      50,
      "user-49",
      "user-49@x.io",
      "1970-01-01T00:00:00.000Z",
      51,
      "user-50",
      "user-50@x.io",
      "1970-01-01T00:00:00.000Z",
      52,
      "user-51",
      "user-51@x.io",
      "1970-01-01T00:00:00.000Z",
      53,
      "user-52",
      "user-52@x.io",
      "1970-01-01T00:00:00.000Z",
      54,
      "user-53",
      "user-53@x.io",
      "1970-01-01T00:00:00.000Z",
      55,
      "user-54",
      "user-54@x.io",
      "1970-01-01T00:00:00.000Z",
      56,
      "user-55",
      "user-55@x.io",
      "1970-01-01T00:00:00.000Z",
      57,
      "user-56",
      "user-56@x.io",
      "1970-01-01T00:00:00.000Z",
      58,
      "user-57",
      "user-57@x.io",
      "1970-01-01T00:00:00.000Z",
      59,
      "user-58",
      "user-58@x.io",
      "1970-01-01T00:00:00.000Z",
      60,
      "user-59",
      "user-59@x.io",
      "1970-01-01T00:00:00.000Z",
      61,
      "user-60",
      "user-60@x.io",
      "1970-01-01T00:00:00.000Z",
      62,
      "user-61",
      "user-61@x.io",
      "1970-01-01T00:00:00.000Z",
      63,
      "user-62",
      "user-62@x.io",
      "1970-01-01T00:00:00.000Z",
      64,
      "user-63",
      "user-63@x.io",
      "1970-01-01T00:00:00.000Z",
      65,
      "user-64",
      "user-64@x.io",
      "1970-01-01T00:00:00.000Z",
      66,
      "user-65",
      "user-65@x.io",
      "1970-01-01T00:00:00.000Z",
      67,
      "user-66",
      "user-66@x.io",
      "1970-01-01T00:00:00.000Z",
      68,
      "user-67",
      "user-67@x.io",
      "1970-01-01T00:00:00.000Z",
      69,
      "user-68",
      "user-68@x.io",
      "1970-01-01T00:00:00.000Z",
      70,
      "user-69",
      "user-69@x.io",
      "1970-01-01T00:00:00.000Z",
      71,
      "user-70",
      "user-70@x.io",
      "1970-01-01T00:00:00.000Z",
      72,
      "user-71",
      "user-71@x.io",
      "1970-01-01T00:00:00.000Z",
      73,
      "user-72",
      "user-72@x.io",
      "1970-01-01T00:00:00.000Z",
      74,
      "user-73",
      "user-73@x.io",
      "1970-01-01T00:00:00.000Z",
      75,
      "user-74",
      "user-74@x.io",
      "1970-01-01T00:00:00.000Z",
      76,
      "user-75",
      "user-75@x.io",
      "1970-01-01T00:00:00.000Z",
      77,
      "user-76",
      "user-76@x.io",
      "1970-01-01T00:00:00.000Z",
      78,
      "user-77",
      "user-77@x.io",
      "1970-01-01T00:00:00.000Z",
      79,
      "user-78",
      "user-78@x.io",
      "1970-01-01T00:00:00.000Z",
      80,
      "user-79",
      "user-79@x.io",
      "1970-01-01T00:00:00.000Z",
      81,
      "user-80",
      "user-80@x.io",
      "1970-01-01T00:00:00.000Z",
      82,
      "user-81",
      "user-81@x.io",
      "1970-01-01T00:00:00.000Z",
      83,
      "user-82",
      "user-82@x.io",
      "1970-01-01T00:00:00.000Z",
      84,
      "user-83",
      "user-83@x.io",
      "1970-01-01T00:00:00.000Z",
      85,
      "user-84",
      "user-84@x.io",
      "1970-01-01T00:00:00.000Z",
      86,
      "user-85",
      "user-85@x.io",
      "1970-01-01T00:00:00.000Z",
      87,
      "user-86",
      "user-86@x.io",
      "1970-01-01T00:00:00.000Z",
      88,
      "user-87",
      "user-87@x.io",
      "1970-01-01T00:00:00.000Z",
      89,
      "user-88",
      "user-88@x.io",
      "1970-01-01T00:00:00.000Z",
      90,
      "user-89",
      "user-89@x.io",
      "1970-01-01T00:00:00.000Z",
      91,
      "user-90",
      "user-90@x.io",
      "1970-01-01T00:00:00.000Z",
      92,
      "user-91",
      "user-91@x.io",
      "1970-01-01T00:00:00.000Z",
      93,
      "user-92",
      "user-92@x.io",
      "1970-01-01T00:00:00.000Z",
      94,
      "user-93",
      "user-93@x.io",
      "1970-01-01T00:00:00.000Z",
      95,
      "user-94",
      "user-94@x.io",
      "1970-01-01T00:00:00.000Z",
      96,
      "user-95",
      "user-95@x.io",
      "1970-01-01T00:00:00.000Z",
      97,
      "user-96",
      "user-96@x.io",
      "1970-01-01T00:00:00.000Z",
      98,
      "user-97",
      "user-97@x.io",
      "1970-01-01T00:00:00.000Z",
      99,
      "user-98",
      "user-98@x.io",
      "1970-01-01T00:00:00.000Z",
      100,
      "user-99",
      "user-99@x.io",
      "1970-01-01T00:00:00.000Z",
    ],
    "sql": "insert into "users" ("id", "name", "email", "createdAt") values ($1, $2, $3, $4), ($5, $6, $7, $8), ($9, $10, $11, $12), ($13, $14, $15, $16), ($17, $18, $19, $20), ($21, $22, $23, $24), ($25, $26, $27, $28), ($29, $30, $31, $32), ($33, $34, $35, $36), ($37, $38, $39, $40), ($41, $42, $43, $44), ($45, $46, $47, $48), ($49, $50, $51, $52), ($53, $54, $55, $56), ($57, $58, $59, $60), ($61, $62, $63, $64), ($65, $66, $67, $68), ($69, $70, $71, $72), ($73, $74, $75, $76), ($77, $78, $79, $80), ($81, $82, $83, $84), ($85, $86, $87, $88), ($89, $90, $91, $92), ($93, $94, $95, $96), ($97, $98, $99, $100), ($101, $102, $103, $104), ($105, $106, $107, $108), ($109, $110, $111, $112), ($113, $114, $115, $116), ($117, $118, $119, $120), ($121, $122, $123, $124), ($125, $126, $127, $128), ($129, $130, $131, $132), ($133, $134, $135, $136), ($137, $138, $139, $140), ($141, $142, $143, $144), ($145, $146, $147, $148), ($149, $150, $151, $152), ($153, $154, $155, $156), ($157, $158, $159, $160), ($161, $162, $163, $164), ($165, $166, $167, $168), ($169, $170, $171, $172), ($173, $174, $175, $176), ($177, $178, $179, $180), ($181, $182, $183, $184), ($185, $186, $187, $188), ($189, $190, $191, $192), ($193, $194, $195, $196), ($197, $198, $199, $200), ($201, $202, $203, $204), ($205, $206, $207, $208), ($209, $210, $211, $212), ($213, $214, $215, $216), ($217, $218, $219, $220), ($221, $222, $223, $224), ($225, $226, $227, $228), ($229, $230, $231, $232), ($233, $234, $235, $236), ($237, $238, $239, $240), ($241, $242, $243, $244), ($245, $246, $247, $248), ($249, $250, $251, $252), ($253, $254, $255, $256), ($257, $258, $259, $260), ($261, $262, $263, $264), ($265, $266, $267, $268), ($269, $270, $271, $272), ($273, $274, $275, $276), ($277, $278, $279, $280), ($281, $282, $283, $284), ($285, $286, $287, $288), ($289, $290, $291, $292), ($293, $294, $295, $296), ($297, $298, $299, $300), ($301, $302, $303, $304), ($305, $306, $307, $308), ($309, $310, $311, $312), ($313, $314, $315, $316), ($317, $318, $319, $320), ($321, $322, $323, $324), ($325, $326, $327, $328), ($329, $330, $331, $332), ($333, $334, $335, $336), ($337, $338, $339, $340), ($341, $342, $343, $344), ($345, $346, $347, $348), ($349, $350, $351, $352), ($353, $354, $355, $356), ($357, $358, $359, $360), ($361, $362, $363, $364), ($365, $366, $367, $368), ($369, $370, $371, $372), ($373, $374, $375, $376), ($377, $378, $379, $380), ($381, $382, $383, $384), ($385, $386, $387, $388), ($389, $390, $391, $392), ($393, $394, $395, $396), ($397, $398, $399, $400)",
  },
  "kysely": {
    "params": [
      1,
      "user-0",
      "user-0@x.io",
      1970-01-01T00:00:00.000Z,
      2,
      "user-1",
      "user-1@x.io",
      1970-01-01T00:00:00.000Z,
      3,
      "user-2",
      "user-2@x.io",
      1970-01-01T00:00:00.000Z,
      4,
      "user-3",
      "user-3@x.io",
      1970-01-01T00:00:00.000Z,
      5,
      "user-4",
      "user-4@x.io",
      1970-01-01T00:00:00.000Z,
      6,
      "user-5",
      "user-5@x.io",
      1970-01-01T00:00:00.000Z,
      7,
      "user-6",
      "user-6@x.io",
      1970-01-01T00:00:00.000Z,
      8,
      "user-7",
      "user-7@x.io",
      1970-01-01T00:00:00.000Z,
      9,
      "user-8",
      "user-8@x.io",
      1970-01-01T00:00:00.000Z,
      10,
      "user-9",
      "user-9@x.io",
      1970-01-01T00:00:00.000Z,
      11,
      "user-10",
      "user-10@x.io",
      1970-01-01T00:00:00.000Z,
      12,
      "user-11",
      "user-11@x.io",
      1970-01-01T00:00:00.000Z,
      13,
      "user-12",
      "user-12@x.io",
      1970-01-01T00:00:00.000Z,
      14,
      "user-13",
      "user-13@x.io",
      1970-01-01T00:00:00.000Z,
      15,
      "user-14",
      "user-14@x.io",
      1970-01-01T00:00:00.000Z,
      16,
      "user-15",
      "user-15@x.io",
      1970-01-01T00:00:00.000Z,
      17,
      "user-16",
      "user-16@x.io",
      1970-01-01T00:00:00.000Z,
      18,
      "user-17",
      "user-17@x.io",
      1970-01-01T00:00:00.000Z,
      19,
      "user-18",
      "user-18@x.io",
      1970-01-01T00:00:00.000Z,
      20,
      "user-19",
      "user-19@x.io",
      1970-01-01T00:00:00.000Z,
      21,
      "user-20",
      "user-20@x.io",
      1970-01-01T00:00:00.000Z,
      22,
      "user-21",
      "user-21@x.io",
      1970-01-01T00:00:00.000Z,
      23,
      "user-22",
      "user-22@x.io",
      1970-01-01T00:00:00.000Z,
      24,
      "user-23",
      "user-23@x.io",
      1970-01-01T00:00:00.000Z,
      25,
      "user-24",
      "user-24@x.io",
      1970-01-01T00:00:00.000Z,
      26,
      "user-25",
      "user-25@x.io",
      1970-01-01T00:00:00.000Z,
      27,
      "user-26",
      "user-26@x.io",
      1970-01-01T00:00:00.000Z,
      28,
      "user-27",
      "user-27@x.io",
      1970-01-01T00:00:00.000Z,
      29,
      "user-28",
      "user-28@x.io",
      1970-01-01T00:00:00.000Z,
      30,
      "user-29",
      "user-29@x.io",
      1970-01-01T00:00:00.000Z,
      31,
      "user-30",
      "user-30@x.io",
      1970-01-01T00:00:00.000Z,
      32,
      "user-31",
      "user-31@x.io",
      1970-01-01T00:00:00.000Z,
      33,
      "user-32",
      "user-32@x.io",
      1970-01-01T00:00:00.000Z,
      34,
      "user-33",
      "user-33@x.io",
      1970-01-01T00:00:00.000Z,
      35,
      "user-34",
      "user-34@x.io",
      1970-01-01T00:00:00.000Z,
      36,
      "user-35",
      "user-35@x.io",
      1970-01-01T00:00:00.000Z,
      37,
      "user-36",
      "user-36@x.io",
      1970-01-01T00:00:00.000Z,
      38,
      "user-37",
      "user-37@x.io",
      1970-01-01T00:00:00.000Z,
      39,
      "user-38",
      "user-38@x.io",
      1970-01-01T00:00:00.000Z,
      40,
      "user-39",
      "user-39@x.io",
      1970-01-01T00:00:00.000Z,
      41,
      "user-40",
      "user-40@x.io",
      1970-01-01T00:00:00.000Z,
      42,
      "user-41",
      "user-41@x.io",
      1970-01-01T00:00:00.000Z,
      43,
      "user-42",
      "user-42@x.io",
      1970-01-01T00:00:00.000Z,
      44,
      "user-43",
      "user-43@x.io",
      1970-01-01T00:00:00.000Z,
      45,
      "user-44",
      "user-44@x.io",
      1970-01-01T00:00:00.000Z,
      46,
      "user-45",
      "user-45@x.io",
      1970-01-01T00:00:00.000Z,
      47,
      "user-46",
      "user-46@x.io",
      1970-01-01T00:00:00.000Z,
      48,
      "user-47",
      "user-47@x.io",
      1970-01-01T00:00:00.000Z,
      49,
      "user-48",
      "user-48@x.io",
      1970-01-01T00:00:00.000Z,
      50,
      "user-49",
      "user-49@x.io",
      1970-01-01T00:00:00.000Z,
      51,
      "user-50",
      "user-50@x.io",
      1970-01-01T00:00:00.000Z,
      52,
      "user-51",
      "user-51@x.io",
      1970-01-01T00:00:00.000Z,
      53,
      "user-52",
      "user-52@x.io",
      1970-01-01T00:00:00.000Z,
      54,
      "user-53",
      "user-53@x.io",
      1970-01-01T00:00:00.000Z,
      55,
      "user-54",
      "user-54@x.io",
      1970-01-01T00:00:00.000Z,
      56,
      "user-55",
      "user-55@x.io",
      1970-01-01T00:00:00.000Z,
      57,
      "user-56",
      "user-56@x.io",
      1970-01-01T00:00:00.000Z,
      58,
      "user-57",
      "user-57@x.io",
      1970-01-01T00:00:00.000Z,
      59,
      "user-58",
      "user-58@x.io",
      1970-01-01T00:00:00.000Z,
      60,
      "user-59",
      "user-59@x.io",
      1970-01-01T00:00:00.000Z,
      61,
      "user-60",
      "user-60@x.io",
      1970-01-01T00:00:00.000Z,
      62,
      "user-61",
      "user-61@x.io",
      1970-01-01T00:00:00.000Z,
      63,
      "user-62",
      "user-62@x.io",
      1970-01-01T00:00:00.000Z,
      64,
      "user-63",
      "user-63@x.io",
      1970-01-01T00:00:00.000Z,
      65,
      "user-64",
      "user-64@x.io",
      1970-01-01T00:00:00.000Z,
      66,
      "user-65",
      "user-65@x.io",
      1970-01-01T00:00:00.000Z,
      67,
      "user-66",
      "user-66@x.io",
      1970-01-01T00:00:00.000Z,
      68,
      "user-67",
      "user-67@x.io",
      1970-01-01T00:00:00.000Z,
      69,
      "user-68",
      "user-68@x.io",
      1970-01-01T00:00:00.000Z,
      70,
      "user-69",
      "user-69@x.io",
      1970-01-01T00:00:00.000Z,
      71,
      "user-70",
      "user-70@x.io",
      1970-01-01T00:00:00.000Z,
      72,
      "user-71",
      "user-71@x.io",
      1970-01-01T00:00:00.000Z,
      73,
      "user-72",
      "user-72@x.io",
      1970-01-01T00:00:00.000Z,
      74,
      "user-73",
      "user-73@x.io",
      1970-01-01T00:00:00.000Z,
      75,
      "user-74",
      "user-74@x.io",
      1970-01-01T00:00:00.000Z,
      76,
      "user-75",
      "user-75@x.io",
      1970-01-01T00:00:00.000Z,
      77,
      "user-76",
      "user-76@x.io",
      1970-01-01T00:00:00.000Z,
      78,
      "user-77",
      "user-77@x.io",
      1970-01-01T00:00:00.000Z,
      79,
      "user-78",
      "user-78@x.io",
      1970-01-01T00:00:00.000Z,
      80,
      "user-79",
      "user-79@x.io",
      1970-01-01T00:00:00.000Z,
      81,
      "user-80",
      "user-80@x.io",
      1970-01-01T00:00:00.000Z,
      82,
      "user-81",
      "user-81@x.io",
      1970-01-01T00:00:00.000Z,
      83,
      "user-82",
      "user-82@x.io",
      1970-01-01T00:00:00.000Z,
      84,
      "user-83",
      "user-83@x.io",
      1970-01-01T00:00:00.000Z,
      85,
      "user-84",
      "user-84@x.io",
      1970-01-01T00:00:00.000Z,
      86,
      "user-85",
      "user-85@x.io",
      1970-01-01T00:00:00.000Z,
      87,
      "user-86",
      "user-86@x.io",
      1970-01-01T00:00:00.000Z,
      88,
      "user-87",
      "user-87@x.io",
      1970-01-01T00:00:00.000Z,
      89,
      "user-88",
      "user-88@x.io",
      1970-01-01T00:00:00.000Z,
      90,
      "user-89",
      "user-89@x.io",
      1970-01-01T00:00:00.000Z,
      91,
      "user-90",
      "user-90@x.io",
      1970-01-01T00:00:00.000Z,
      92,
      "user-91",
      "user-91@x.io",
      1970-01-01T00:00:00.000Z,
      93,
      "user-92",
      "user-92@x.io",
      1970-01-01T00:00:00.000Z,
      94,
      "user-93",
      "user-93@x.io",
      1970-01-01T00:00:00.000Z,
      95,
      "user-94",
      "user-94@x.io",
      1970-01-01T00:00:00.000Z,
      96,
      "user-95",
      "user-95@x.io",
      1970-01-01T00:00:00.000Z,
      97,
      "user-96",
      "user-96@x.io",
      1970-01-01T00:00:00.000Z,
      98,
      "user-97",
      "user-97@x.io",
      1970-01-01T00:00:00.000Z,
      99,
      "user-98",
      "user-98@x.io",
      1970-01-01T00:00:00.000Z,
      100,
      "user-99",
      "user-99@x.io",
      1970-01-01T00:00:00.000Z,
    ],
    "sql": "insert into "users" ("id", "name", "email", "createdAt") values ($1, $2, $3, $4), ($5, $6, $7, $8), ($9, $10, $11, $12), ($13, $14, $15, $16), ($17, $18, $19, $20), ($21, $22, $23, $24), ($25, $26, $27, $28), ($29, $30, $31, $32), ($33, $34, $35, $36), ($37, $38, $39, $40), ($41, $42, $43, $44), ($45, $46, $47, $48), ($49, $50, $51, $52), ($53, $54, $55, $56), ($57, $58, $59, $60), ($61, $62, $63, $64), ($65, $66, $67, $68), ($69, $70, $71, $72), ($73, $74, $75, $76), ($77, $78, $79, $80), ($81, $82, $83, $84), ($85, $86, $87, $88), ($89, $90, $91, $92), ($93, $94, $95, $96), ($97, $98, $99, $100), ($101, $102, $103, $104), ($105, $106, $107, $108), ($109, $110, $111, $112), ($113, $114, $115, $116), ($117, $118, $119, $120), ($121, $122, $123, $124), ($125, $126, $127, $128), ($129, $130, $131, $132), ($133, $134, $135, $136), ($137, $138, $139, $140), ($141, $142, $143, $144), ($145, $146, $147, $148), ($149, $150, $151, $152), ($153, $154, $155, $156), ($157, $158, $159, $160), ($161, $162, $163, $164), ($165, $166, $167, $168), ($169, $170, $171, $172), ($173, $174, $175, $176), ($177, $178, $179, $180), ($181, $182, $183, $184), ($185, $186, $187, $188), ($189, $190, $191, $192), ($193, $194, $195, $196), ($197, $198, $199, $200), ($201, $202, $203, $204), ($205, $206, $207, $208), ($209, $210, $211, $212), ($213, $214, $215, $216), ($217, $218, $219, $220), ($221, $222, $223, $224), ($225, $226, $227, $228), ($229, $230, $231, $232), ($233, $234, $235, $236), ($237, $238, $239, $240), ($241, $242, $243, $244), ($245, $246, $247, $248), ($249, $250, $251, $252), ($253, $254, $255, $256), ($257, $258, $259, $260), ($261, $262, $263, $264), ($265, $266, $267, $268), ($269, $270, $271, $272), ($273, $274, $275, $276), ($277, $278, $279, $280), ($281, $282, $283, $284), ($285, $286, $287, $288), ($289, $290, $291, $292), ($293, $294, $295, $296), ($297, $298, $299, $300), ($301, $302, $303, $304), ($305, $306, $307, $308), ($309, $310, $311, $312), ($313, $314, $315, $316), ($317, $318, $319, $320), ($321, $322, $323, $324), ($325, $326, $327, $328), ($329, $330, $331, $332), ($333, $334, $335, $336), ($337, $338, $339, $340), ($341, $342, $343, $344), ($345, $346, $347, $348), ($349, $350, $351, $352), ($353, $354, $355, $356), ($357, $358, $359, $360), ($361, $362, $363, $364), ($365, $366, $367, $368), ($369, $370, $371, $372), ($373, $374, $375, $376), ($377, $378, $379, $380), ($381, $382, $383, $384), ($385, $386, $387, $388), ($389, $390, $391, $392), ($393, $394, $395, $396), ($397, $398, $399, $400)",
  },
  "sumak": {
    "params": [
      1,
      "user-0",
      "user-0@x.io",
      1970-01-01T00:00:00.000Z,
      2,
      "user-1",
      "user-1@x.io",
      1970-01-01T00:00:00.000Z,
      3,
      "user-2",
      "user-2@x.io",
      1970-01-01T00:00:00.000Z,
      4,
      "user-3",
      "user-3@x.io",
      1970-01-01T00:00:00.000Z,
      5,
      "user-4",
      "user-4@x.io",
      1970-01-01T00:00:00.000Z,
      6,
      "user-5",
      "user-5@x.io",
      1970-01-01T00:00:00.000Z,
      7,
      "user-6",
      "user-6@x.io",
      1970-01-01T00:00:00.000Z,
      8,
      "user-7",
      "user-7@x.io",
      1970-01-01T00:00:00.000Z,
      9,
      "user-8",
      "user-8@x.io",
      1970-01-01T00:00:00.000Z,
      10,
      "user-9",
      "user-9@x.io",
      1970-01-01T00:00:00.000Z,
      11,
      "user-10",
      "user-10@x.io",
      1970-01-01T00:00:00.000Z,
      12,
      "user-11",
      "user-11@x.io",
      1970-01-01T00:00:00.000Z,
      13,
      "user-12",
      "user-12@x.io",
      1970-01-01T00:00:00.000Z,
      14,
      "user-13",
      "user-13@x.io",
      1970-01-01T00:00:00.000Z,
      15,
      "user-14",
      "user-14@x.io",
      1970-01-01T00:00:00.000Z,
      16,
      "user-15",
      "user-15@x.io",
      1970-01-01T00:00:00.000Z,
      17,
      "user-16",
      "user-16@x.io",
      1970-01-01T00:00:00.000Z,
      18,
      "user-17",
      "user-17@x.io",
      1970-01-01T00:00:00.000Z,
      19,
      "user-18",
      "user-18@x.io",
      1970-01-01T00:00:00.000Z,
      20,
      "user-19",
      "user-19@x.io",
      1970-01-01T00:00:00.000Z,
      21,
      "user-20",
      "user-20@x.io",
      1970-01-01T00:00:00.000Z,
      22,
      "user-21",
      "user-21@x.io",
      1970-01-01T00:00:00.000Z,
      23,
      "user-22",
      "user-22@x.io",
      1970-01-01T00:00:00.000Z,
      24,
      "user-23",
      "user-23@x.io",
      1970-01-01T00:00:00.000Z,
      25,
      "user-24",
      "user-24@x.io",
      1970-01-01T00:00:00.000Z,
      26,
      "user-25",
      "user-25@x.io",
      1970-01-01T00:00:00.000Z,
      27,
      "user-26",
      "user-26@x.io",
      1970-01-01T00:00:00.000Z,
      28,
      "user-27",
      "user-27@x.io",
      1970-01-01T00:00:00.000Z,
      29,
      "user-28",
      "user-28@x.io",
      1970-01-01T00:00:00.000Z,
      30,
      "user-29",
      "user-29@x.io",
      1970-01-01T00:00:00.000Z,
      31,
      "user-30",
      "user-30@x.io",
      1970-01-01T00:00:00.000Z,
      32,
      "user-31",
      "user-31@x.io",
      1970-01-01T00:00:00.000Z,
      33,
      "user-32",
      "user-32@x.io",
      1970-01-01T00:00:00.000Z,
      34,
      "user-33",
      "user-33@x.io",
      1970-01-01T00:00:00.000Z,
      35,
      "user-34",
      "user-34@x.io",
      1970-01-01T00:00:00.000Z,
      36,
      "user-35",
      "user-35@x.io",
      1970-01-01T00:00:00.000Z,
      37,
      "user-36",
      "user-36@x.io",
      1970-01-01T00:00:00.000Z,
      38,
      "user-37",
      "user-37@x.io",
      1970-01-01T00:00:00.000Z,
      39,
      "user-38",
      "user-38@x.io",
      1970-01-01T00:00:00.000Z,
      40,
      "user-39",
      "user-39@x.io",
      1970-01-01T00:00:00.000Z,
      41,
      "user-40",
      "user-40@x.io",
      1970-01-01T00:00:00.000Z,
      42,
      "user-41",
      "user-41@x.io",
      1970-01-01T00:00:00.000Z,
      43,
      "user-42",
      "user-42@x.io",
      1970-01-01T00:00:00.000Z,
      44,
      "user-43",
      "user-43@x.io",
      1970-01-01T00:00:00.000Z,
      45,
      "user-44",
      "user-44@x.io",
      1970-01-01T00:00:00.000Z,
      46,
      "user-45",
      "user-45@x.io",
      1970-01-01T00:00:00.000Z,
      47,
      "user-46",
      "user-46@x.io",
      1970-01-01T00:00:00.000Z,
      48,
      "user-47",
      "user-47@x.io",
      1970-01-01T00:00:00.000Z,
      49,
      "user-48",
      "user-48@x.io",
      1970-01-01T00:00:00.000Z,
      50,
      "user-49",
      "user-49@x.io",
      1970-01-01T00:00:00.000Z,
      51,
      "user-50",
      "user-50@x.io",
      1970-01-01T00:00:00.000Z,
      52,
      "user-51",
      "user-51@x.io",
      1970-01-01T00:00:00.000Z,
      53,
      "user-52",
      "user-52@x.io",
      1970-01-01T00:00:00.000Z,
      54,
      "user-53",
      "user-53@x.io",
      1970-01-01T00:00:00.000Z,
      55,
      "user-54",
      "user-54@x.io",
      1970-01-01T00:00:00.000Z,
      56,
      "user-55",
      "user-55@x.io",
      1970-01-01T00:00:00.000Z,
      57,
      "user-56",
      "user-56@x.io",
      1970-01-01T00:00:00.000Z,
      58,
      "user-57",
      "user-57@x.io",
      1970-01-01T00:00:00.000Z,
      59,
      "user-58",
      "user-58@x.io",
      1970-01-01T00:00:00.000Z,
      60,
      "user-59",
      "user-59@x.io",
      1970-01-01T00:00:00.000Z,
      61,
      "user-60",
      "user-60@x.io",
      1970-01-01T00:00:00.000Z,
      62,
      "user-61",
      "user-61@x.io",
      1970-01-01T00:00:00.000Z,
      63,
      "user-62",
      "user-62@x.io",
      1970-01-01T00:00:00.000Z,
      64,
      "user-63",
      "user-63@x.io",
      1970-01-01T00:00:00.000Z,
      65,
      "user-64",
      "user-64@x.io",
      1970-01-01T00:00:00.000Z,
      66,
      "user-65",
      "user-65@x.io",
      1970-01-01T00:00:00.000Z,
      67,
      "user-66",
      "user-66@x.io",
      1970-01-01T00:00:00.000Z,
      68,
      "user-67",
      "user-67@x.io",
      1970-01-01T00:00:00.000Z,
      69,
      "user-68",
      "user-68@x.io",
      1970-01-01T00:00:00.000Z,
      70,
      "user-69",
      "user-69@x.io",
      1970-01-01T00:00:00.000Z,
      71,
      "user-70",
      "user-70@x.io",
      1970-01-01T00:00:00.000Z,
      72,
      "user-71",
      "user-71@x.io",
      1970-01-01T00:00:00.000Z,
      73,
      "user-72",
      "user-72@x.io",
      1970-01-01T00:00:00.000Z,
      74,
      "user-73",
      "user-73@x.io",
      1970-01-01T00:00:00.000Z,
      75,
      "user-74",
      "user-74@x.io",
      1970-01-01T00:00:00.000Z,
      76,
      "user-75",
      "user-75@x.io",
      1970-01-01T00:00:00.000Z,
      77,
      "user-76",
      "user-76@x.io",
      1970-01-01T00:00:00.000Z,
      78,
      "user-77",
      "user-77@x.io",
      1970-01-01T00:00:00.000Z,
      79,
      "user-78",
      "user-78@x.io",
      1970-01-01T00:00:00.000Z,
      80,
      "user-79",
      "user-79@x.io",
      1970-01-01T00:00:00.000Z,
      81,
      "user-80",
      "user-80@x.io",
      1970-01-01T00:00:00.000Z,
      82,
      "user-81",
      "user-81@x.io",
      1970-01-01T00:00:00.000Z,
      83,
      "user-82",
      "user-82@x.io",
      1970-01-01T00:00:00.000Z,
      84,
      "user-83",
      "user-83@x.io",
      1970-01-01T00:00:00.000Z,
      85,
      "user-84",
      "user-84@x.io",
      1970-01-01T00:00:00.000Z,
      86,
      "user-85",
      "user-85@x.io",
      1970-01-01T00:00:00.000Z,
      87,
      "user-86",
      "user-86@x.io",
      1970-01-01T00:00:00.000Z,
      88,
      "user-87",
      "user-87@x.io",
      1970-01-01T00:00:00.000Z,
      89,
      "user-88",
      "user-88@x.io",
      1970-01-01T00:00:00.000Z,
      90,
      "user-89",
      "user-89@x.io",
      1970-01-01T00:00:00.000Z,
      91,
      "user-90",
      "user-90@x.io",
      1970-01-01T00:00:00.000Z,
      92,
      "user-91",
      "user-91@x.io",
      1970-01-01T00:00:00.000Z,
      93,
      "user-92",
      "user-92@x.io",
      1970-01-01T00:00:00.000Z,
      94,
      "user-93",
      "user-93@x.io",
      1970-01-01T00:00:00.000Z,
      95,
      "user-94",
      "user-94@x.io",
      1970-01-01T00:00:00.000Z,
      96,
      "user-95",
      "user-95@x.io",
      1970-01-01T00:00:00.000Z,
      97,
      "user-96",
      "user-96@x.io",
      1970-01-01T00:00:00.000Z,
      98,
      "user-97",
      "user-97@x.io",
      1970-01-01T00:00:00.000Z,
      99,
      "user-98",
      "user-98@x.io",
      1970-01-01T00:00:00.000Z,
      100,
      "user-99",
      "user-99@x.io",
      1970-01-01T00:00:00.000Z,
    ],
    "sql": "INSERT INTO "users" ("id", "name", "email", "createdAt") VALUES ($1, $2, $3, $4), ($5, $6, $7, $8), ($9, $10, $11, $12), ($13, $14, $15, $16), ($17, $18, $19, $20), ($21, $22, $23, $24), ($25, $26, $27, $28), ($29, $30, $31, $32), ($33, $34, $35, $36), ($37, $38, $39, $40), ($41, $42, $43, $44), ($45, $46, $47, $48), ($49, $50, $51, $52), ($53, $54, $55, $56), ($57, $58, $59, $60), ($61, $62, $63, $64), ($65, $66, $67, $68), ($69, $70, $71, $72), ($73, $74, $75, $76), ($77, $78, $79, $80), ($81, $82, $83, $84), ($85, $86, $87, $88), ($89, $90, $91, $92), ($93, $94, $95, $96), ($97, $98, $99, $100), ($101, $102, $103, $104), ($105, $106, $107, $108), ($109, $110, $111, $112), ($113, $114, $115, $116), ($117, $118, $119, $120), ($121, $122, $123, $124), ($125, $126, $127, $128), ($129, $130, $131, $132), ($133, $134, $135, $136), ($137, $138, $139, $140), ($141, $142, $143, $144), ($145, $146, $147, $148), ($149, $150, $151, $152), ($153, $154, $155, $156), ($157, $158, $159, $160), ($161, $162, $163, $164), ($165, $166, $167, $168), ($169, $170, $171, $172), ($173, $174, $175, $176), ($177, $178, $179, $180), ($181, $182, $183, $184), ($185, $186, $187, $188), ($189, $190, $191, $192), ($193, $194, $195, $196), ($197, $198, $199, $200), ($201, $202, $203, $204), ($205, $206, $207, $208), ($209, $210, $211, $212), ($213, $214, $215, $216), ($217, $218, $219, $220), ($221, $222, $223, $224), ($225, $226, $227, $228), ($229, $230, $231, $232), ($233, $234, $235, $236), ($237, $238, $239, $240), ($241, $242, $243, $244), ($245, $246, $247, $248), ($249, $250, $251, $252), ($253, $254, $255, $256), ($257, $258, $259, $260), ($261, $262, $263, $264), ($265, $266, $267, $268), ($269, $270, $271, $272), ($273, $274, $275, $276), ($277, $278, $279, $280), ($281, $282, $283, $284), ($285, $286, $287, $288), ($289, $290, $291, $292), ($293, $294, $295, $296), ($297, $298, $299, $300), ($301, $302, $303, $304), ($305, $306, $307, $308), ($309, $310, $311, $312), ($313, $314, $315, $316), ($317, $318, $319, $320), ($321, $322, $323, $324), ($325, $326, $327, $328), ($329, $330, $331, $332), ($333, $334, $335, $336), ($337, $338, $339, $340), ($341, $342, $343, $344), ($345, $346, $347, $348), ($349, $350, $351, $352), ($353, $354, $355, $356), ($357, $358, $359, $360), ($361, $362, $363, $364), ($365, $366, $367, $368), ($369, $370, $371, $372), ($373, $374, $375, $376), ($377, $378, $379, $380), ($381, $382, $383, $384), ($385, $386, $387, $388), ($389, $390, $391, $392), ($393, $394, $395, $396), ($397, $398, $399, $400)",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > insert-values > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      1,
      "ada",
      "ada@x.io",
      "1970-01-01T00:00:00.000Z",
    ],
    "sql": "insert into "users" ("id", "name", "email", "createdAt") values ($1, $2, $3, $4)",
  },
  "kysely": {
    "params": [
      1,
      "ada",
      "ada@x.io",
      1970-01-01T00:00:00.000Z,
    ],
    "sql": "insert into "users" ("id", "name", "email", "createdAt") values ($1, $2, $3, $4)",
  },
  "sumak": {
    "params": [
      1,
      "ada",
      "ada@x.io",
      1970-01-01T00:00:00.000Z,
    ],
    "sql": "INSERT INTO "users" ("id", "name", "email", "createdAt") VALUES ($1, $2, $3, $4)",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > join-2-tables > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [],
    "sql": "select "posts"."id", "posts"."title", "users"."name" from "posts" inner join "users" on "posts"."authorId" = "users"."id"",
  },
  "kysely": {
    "params": [],
    "sql": "select "posts"."id", "posts"."title", "users"."name" from "posts" inner join "users" on "posts"."authorId" = "users"."id"",
  },
  "sumak": {
    "params": [],
    "sql": "SELECT "posts.id", "posts.title", "users.name" FROM "posts" INNER JOIN "users" ON ("posts"."authorId" = "users"."id")",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > left-join-3-tables > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [],
    "sql": "select "comments"."id", "posts"."title", "users"."name" from "comments" left join "posts" on "comments"."postId" = "posts"."id" left join "users" on "comments"."authorId" = "users"."id"",
  },
  "kysely": {
    "params": [],
    "sql": "select "comments"."id", "posts"."title", "users"."name" from "comments" left join "posts" on "comments"."postId" = "posts"."id" left join "users" on "comments"."authorId" = "users"."id"",
  },
  "sumak": {
    "params": [],
    "sql": "SELECT "comments.id", "posts.title", "users.name" FROM "comments" LEFT JOIN "posts" ON ("comments"."postId" = "posts"."id") LEFT JOIN "users" ON ("comments"."authorId" = "users"."id")",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-aggregate > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [],
    "sql": "select count(*), max("id"), avg("id") from "users"",
  },
  "kysely": {
    "params": [],
    "sql": "select count(*) as "total", max("id") as "highestId", avg("id") as "avgId" from "users"",
  },
  "sumak": {
    "params": [],
    "sql": "SELECT COUNT(*) AS "total", MAX("id") AS "highestId", AVG("id") AS "avgId" FROM "users"",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-all > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [],
    "sql": "select "id", "name", "email", "createdAt" from "users"",
  },
  "kysely": {
    "params": [],
    "sql": "select * from "users"",
  },
  "sumak": {
    "params": [],
    "sql": "SELECT * FROM "users"",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-distinct > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [],
    "sql": "select distinct "name" from "users"",
  },
  "kysely": {
    "params": [],
    "sql": "select distinct "name" from "users"",
  },
  "sumak": {
    "params": [],
    "sql": "SELECT DISTINCT "name" FROM "users"",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-group-having > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      0,
    ],
    "sql": "select "authorId", count(*) from "posts" group by "posts"."authorId" having "posts"."authorId" > $1",
  },
  "kysely": {
    "params": [
      0,
    ],
    "sql": "select "authorId", count(*) as "total" from "posts" group by "authorId" having "authorId" > $1",
  },
  "sumak": {
    "params": [
      0,
    ],
    "sql": "SELECT "authorId", COUNT(*) AS "total" FROM "posts" GROUP BY "authorId" HAVING ("authorId" > $1)",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-order-desc-limit > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      20,
    ],
    "sql": "select "id", "authorId", "title", "body", "published" from "posts" order by "posts"."published" desc limit $1",
  },
  "kysely": {
    "params": [
      20,
    ],
    "sql": "select * from "posts" order by "published" desc limit $1",
  },
  "sumak": {
    "params": [],
    "sql": "SELECT * FROM "posts" ORDER BY "published" DESC LIMIT 20",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-order-limit > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      10,
      20,
    ],
    "sql": "select "id", "name", "email", "createdAt" from "users" order by "users"."name" limit $1 offset $2",
  },
  "kysely": {
    "params": [
      10,
      20,
    ],
    "sql": "select * from "users" order by "name" asc limit $1 offset $2",
  },
  "sumak": {
    "params": [],
    "sql": "SELECT * FROM "users" ORDER BY "name" ASC LIMIT 10 OFFSET 20",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-subquery-in > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      0,
    ],
    "sql": "select "id", "authorId", "title", "body", "published" from "posts" where "posts"."authorId" in (select "id" from "users" where "users"."id" > $1)",
  },
  "kysely": {
    "params": [
      0,
    ],
    "sql": "select * from "posts" where "authorId" in (select "id" from "users" where "id" > $1)",
  },
  "sumak": {
    "params": [
      0,
    ],
    "sql": "SELECT * FROM "posts" WHERE ("authorId" IN (SELECT "id" FROM "users" WHERE ("id" > $1)))",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-where-and > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      7,
      0,
    ],
    "sql": "select "id", "authorId", "title", "body", "published" from "posts" where ("posts"."authorId" = $1 and "posts"."published" > $2)",
  },
  "kysely": {
    "params": [
      7,
      0,
    ],
    "sql": "select * from "posts" where "authorId" = $1 and "published" > $2",
  },
  "sumak": {
    "params": [
      7,
      0,
    ],
    "sql": "SELECT * FROM "posts" WHERE (("authorId" = $1) AND ("published" > $2))",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-where-deep-and > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      1,
      0,
      "",
      "",
      0,
    ],
    "sql": "select "id", "authorId", "title", "body", "published" from "posts" where ("posts"."authorId" = $1 and "posts"."published" > $2 and "posts"."title" <> $3 and "posts"."body" <> $4 and "posts"."id" > $5)",
  },
  "kysely": {
    "params": [
      1,
      0,
      "",
      "",
      0,
    ],
    "sql": "select * from "posts" where "authorId" = $1 and "published" > $2 and "title" <> $3 and "body" <> $4 and "id" > $5",
  },
  "sumak": {
    "params": [
      1,
      0,
      "",
      "",
      0,
    ],
    "sql": "SELECT * FROM "posts" WHERE ((((("authorId" = $1) AND ("published" > $2)) AND ("title" != $3)) AND ("body" != $4)) AND ("id" > $5))",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-where-eq > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      42,
    ],
    "sql": "select "id", "name" from "users" where "users"."id" = $1",
  },
  "kysely": {
    "params": [
      42,
    ],
    "sql": "select "id", "name" from "users" where "id" = $1",
  },
  "sumak": {
    "params": [
      42,
    ],
    "sql": "SELECT "id", "name" FROM "users" WHERE ("id" = $1)",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-where-in-large > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
      14,
      15,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26,
      27,
      28,
      29,
      30,
      31,
      32,
      33,
      34,
      35,
      36,
      37,
      38,
      39,
      40,
      41,
      42,
      43,
      44,
      45,
      46,
      47,
      48,
      49,
      50,
      51,
      52,
      53,
      54,
      55,
      56,
      57,
      58,
      59,
      60,
      61,
      62,
      63,
      64,
      65,
      66,
      67,
      68,
      69,
      70,
      71,
      72,
      73,
      74,
      75,
      76,
      77,
      78,
      79,
      80,
      81,
      82,
      83,
      84,
      85,
      86,
      87,
      88,
      89,
      90,
      91,
      92,
      93,
      94,
      95,
      96,
      97,
      98,
      99,
      100,
    ],
    "sql": "select "id", "name", "email", "createdAt" from "users" where "users"."id" in ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14, $15, $16, $17, $18, $19, $20, $21, $22, $23, $24, $25, $26, $27, $28, $29, $30, $31, $32, $33, $34, $35, $36, $37, $38, $39, $40, $41, $42, $43, $44, $45, $46, $47, $48, $49, $50, $51, $52, $53, $54, $55, $56, $57, $58, $59, $60, $61, $62, $63, $64, $65, $66, $67, $68, $69, $70, $71, $72, $73, $74, $75, $76, $77, $78, $79, $80, $81, $82, $83, $84, $85, $86, $87, $88, $89, $90, $91, $92, $93, $94, $95, $96, $97, $98, $99, $100)",
  },
  "kysely": {
    "params": [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
      14,
      15,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26,
      27,
      28,
      29,
      30,
      31,
      32,
      33,
      34,
      35,
      36,
      37,
      38,
      39,
      40,
      41,
      42,
      43,
      44,
      45,
      46,
      47,
      48,
      49,
      50,
      51,
      52,
      53,
      54,
      55,
      56,
      57,
      58,
      59,
      60,
      61,
      62,
      63,
      64,
      65,
      66,
      67,
      68,
      69,
      70,
      71,
      72,
      73,
      74,
      75,
      76,
      77,
      78,
      79,
      80,
      81,
      82,
      83,
      84,
      85,
      86,
      87,
      88,
      89,
      90,
      91,
      92,
      93,
      94,
      95,
      96,
      97,
      98,
      99,
      100,
    ],
    "sql": "select * from "users" where "id" in ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14, $15, $16, $17, $18, $19, $20, $21, $22, $23, $24, $25, $26, $27, $28, $29, $30, $31, $32, $33, $34, $35, $36, $37, $38, $39, $40, $41, $42, $43, $44, $45, $46, $47, $48, $49, $50, $51, $52, $53, $54, $55, $56, $57, $58, $59, $60, $61, $62, $63, $64, $65, $66, $67, $68, $69, $70, $71, $72, $73, $74, $75, $76, $77, $78, $79, $80, $81, $82, $83, $84, $85, $86, $87, $88, $89, $90, $91, $92, $93, $94, $95, $96, $97, $98, $99, $100)",
  },
  "sumak": {
    "params": [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
      14,
      15,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26,
      27,
      28,
      29,
      30,
      31,
      32,
      33,
      34,
      35,
      36,
      37,
      38,
      39,
      40,
      41,
      42,
      43,
      44,
      45,
      46,
      47,
      48,
      49,
      50,
      51,
      52,
      53,
      54,
      55,
      56,
      57,
      58,
      59,
      60,
      61,
      62,
      63,
      64,
      65,
      66,
      67,
      68,
      69,
      70,
      71,
      72,
      73,
      74,
      75,
      76,
      77,
      78,
      79,
      80,
      81,
      82,
      83,
      84,
      85,
      86,
      87,
      88,
      89,
      90,
      91,
      92,
      93,
      94,
      95,
      96,
      97,
      98,
      99,
      100,
    ],
    "sql": "SELECT * FROM "users" WHERE ("id" IN ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14, $15, $16, $17, $18, $19, $20, $21, $22, $23, $24, $25, $26, $27, $28, $29, $30, $31, $32, $33, $34, $35, $36, $37, $38, $39, $40, $41, $42, $43, $44, $45, $46, $47, $48, $49, $50, $51, $52, $53, $54, $55, $56, $57, $58, $59, $60, $61, $62, $63, $64, $65, $66, $67, $68, $69, $70, $71, $72, $73, $74, $75, $76, $77, $78, $79, $80, $81, $82, $83, $84, $85, $86, $87, $88, $89, $90, $91, $92, $93, $94, $95, $96, $97, $98, $99, $100))",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-where-in-small > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      1,
      2,
      3,
      4,
      5,
    ],
    "sql": "select "id", "name", "email", "createdAt" from "users" where "users"."id" in ($1, $2, $3, $4, $5)",
  },
  "kysely": {
    "params": [
      1,
      2,
      3,
      4,
      5,
    ],
    "sql": "select * from "users" where "id" in ($1, $2, $3, $4, $5)",
  },
  "sumak": {
    "params": [
      1,
      2,
      3,
      4,
      5,
    ],
    "sql": "SELECT * FROM "users" WHERE ("id" IN ($1, $2, $3, $4, $5))",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > select-where-or > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      1,
      "ada",
    ],
    "sql": "select "id", "name" from "users" where ("users"."id" = $1 or "users"."name" = $2)",
  },
  "kysely": {
    "params": [
      1,
      "ada",
    ],
    "sql": "select "id", "name" from "users" where ("id" = $1 or "name" = $2)",
  },
  "sumak": {
    "params": [
      1,
      "ada",
    ],
    "sql": "SELECT "id", "name" FROM "users" WHERE (("id" = $1) OR ("name" = $2))",
  },
}
`;

exports[`bench scenarios produce equivalent SQL > update-where > snapshot of generated SQL 1`] = `
{
  "drizzle": {
    "params": [
      "x",
      1,
    ],
    "sql": "update "users" set "name" = $1 where "users"."id" = $2",
  },
  "kysely": {
    "params": [
      "x",
      1,
    ],
    "sql": "update "users" set "name" = $1 where "id" = $2",
  },
  "sumak": {
    "params": [
      "x",
      1,
    ],
    "sql": "UPDATE "users" SET "name" = $1 WHERE ("id" = $2)",
  },
}
`;
